# satellite-obdh

./: .gitignore  CMakeLists.txt  README.md  toolchain-arm.cmake
.github/workflows/: ci.yml
build-arm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm/hal/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-arm/obdh/: CTestTestfile.cmake  Makefile  cmake_install.cmake  obdh_main
build-arm/payload/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hal/: CMakeLists.txt
hal/mocks/: mock_can.h
hal/src/: can_interface.h  socketcan.cpp  socketcan.h
images/: boot-satellite.sh
obdh/: CMakeLists.txt
obdh/src/: beacon.cpp  beacon.h  can_queue.h  main.cpp  obdh.cpp  obdh.h  orbital_env.h
obdh/tests/: test_beacon.cpp  test_obdh.cpp  test_threading.cpp
payload/: CMakeLists.txt
